--- a/src/EventPi.Events.MachineWork/EventPi.Events.MachineWork.csproj
+++ b/src/EventPi.Events.MachineWork/EventPi.Events.MachineWork.csproj
@@ -31,4 +31,9 @@
     <PackageReference Include="protobuf-net" Version="3.2.30" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\EventPi.Abstractions\EventPi.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
