--- a/src/EventPi.Advertiser.Cli/Properties/launchSettings.json
+++ b/src/EventPi.Advertiser.Cli/Properties/launchSettings.json
@@ -3,6 +3,11 @@
     "EventPi.Advertiser.Cli": {
       "commandName": "Project",
       "commandLineArgs": "advertise"
+    },
+    "WSL": {
+      "commandName": "WSL2",
+      "distributionName": "",
+      "commandLineArgs": "advertise"
     }
   }
 }
