--- a/src/EventPi.Services.Camera/EventPi.Services.Camera.csproj
+++ b/src/EventPi.Services.Camera/EventPi.Services.Camera.csproj
@@ -21,6 +21,7 @@
 
 	<ItemGroup>
 		<Protobuf Include="Protos\frameFeatures.proto" GrpcServices="Server" />
+		<Protobuf Include="Protos\cameraOptions.proto" GrpcServices="Client" />
 	</ItemGroup>
 
   <ItemGroup>
