--- a/src/EventPi.Services.Camera.Contract/EventPi.Services.Camera.Contract.csproj
+++ b/src/EventPi.Services.Camera.Contract/EventPi.Services.Camera.Contract.csproj
@@ -5,5 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="MicroPlumberd" Version="1.0.60.112" />
+  </ItemGroup>
 </Project>
