--- a/src/EventPi.Services.Camera/EventPi.Services.Camera.csproj
+++ b/src/EventPi.Services.Camera/EventPi.Services.Camera.csproj
@@ -38,16 +38,16 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
-	  <PackageReference Include="MicroPlumberd" Version="1.0.57.111" />
-    <PackageReference Include="MicroPlumberd.DirectConnect" Version="1.0.8.32" />
-    <PackageReference Include="MicroPlumberd.Services" Version="1.0.57.111" />
-    <PackageReference Include="MicroPlumberd.SourceGenerators" Version="1.0.57.111" />
+	  <PackageReference Include="MicroPlumberd" Version="1.0.60.112" />
+    <PackageReference Include="MicroPlumberd.Services" Version="1.0.60.112" />
+    <PackageReference Include="MicroPlumberd.SourceGenerators" Version="1.0.60.112" />
     <PackageReference Include="ModelingEvolution.DirectConnect" Version="1.0.8.25" />
     <PackageReference Include="protobuf-net.Core" Version="3.2.30" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\EventPi.Abstractions\EventPi.Abstractions.csproj" />
+    <ProjectReference Include="..\EventPi.Services.Camera.Contract\EventPi.Services.Camera.Contract.csproj" />
   </ItemGroup>
 
 </Project>
