--- a/src/EventPi.Services.Camera.Ui/EventPi.Services.Camera.Ui.csproj
+++ b/src/EventPi.Services.Camera.Ui/EventPi.Services.Camera.Ui.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="MudBlazor" Version="6.19.1" />
     <PackageReference Include="MicroPlumberd.Services" Version="1.0.60.112" />
     <PackageReference Include="MicroPlumberd.SourceGenerators" Version="1.0.60.112" />
