--- a/src/EventPi.Abstractions/EventPi.Abstractions.csproj
+++ b/src/EventPi.Abstractions/EventPi.Abstractions.csproj
@@ -25,7 +25,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="MicroPlumberd" Version="1.0.60.112" />
-    <PackageReference Include="ModelingEvolution.DirectConnect" Version="1.0.8.25" />
+    <PackageReference Include="MicroPlumberd" Version="1.0.62.114" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
+    
   </ItemGroup>
 </Project>
