--- a/src/EventPi.NetworkMonitor.App.Blazor/EventPi.NetworkMonitor.App.Blazor.csproj
+++ b/src/EventPi.NetworkMonitor.App.Blazor/EventPi.NetworkMonitor.App.Blazor.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,8 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="MudBlazor" Version="6.19.1" />
-    <PackageReference Include="MicroPlumberd.Services" Version="1.0.60.112" />
-    <PackageReference Include="MicroPlumberd.SourceGenerators" Version="1.0.60.112" />
+    <PackageReference Include="MicroPlumberd.Services" Version="1.0.62.114" />
+    <PackageReference Include="MicroPlumberd.SourceGenerators" Version="1.0.62.114" />
   </ItemGroup>
 
   <ItemGroup>
