--- a/src/EventPi.NetworkMonitor.App.Blazor/appsettings.Development.json
+++ b/src/EventPi.NetworkMonitor.App.Blazor/appsettings.Development.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "EventStore": "esdb://admin:changeit@192.168.30.22:2113?tls=false&tlsVerifyCert=false",
+  "HostName": "pi-200"
 }
