--- a/src/EventPi.NetworkMonitor.App.Blazor/appsettings.json
+++ b/src/EventPi.NetworkMonitor.App.Blazor/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EventStore": "esdb://admin:changeit@localhost:2113?tls=false&tlsVerifyCert=false"
 }
