--- a/src/EventPi.NetworkMonitor/EventPi.NetworkMonitor.csproj
+++ b/src/EventPi.NetworkMonitor/EventPi.NetworkMonitor.csproj
@@ -6,6 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Tmds.DBus.Protocol" Version="0.17.0" />
+    <PackageReference Include="Tmds.DBus.Protocol" Version="0.18.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EventPi.Abstractions\EventPi.Abstractions.csproj" />
   </ItemGroup>
 </Project>
