--- a/src/EventPi.Services.NetworkMonitor.Contract/EventPi.Services.NetworkMonitor.Contract.csproj
+++ b/src/EventPi.Services.NetworkMonitor.Contract/EventPi.Services.NetworkMonitor.Contract.csproj
@@ -7,11 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MicroPlumberd" Version="1.0.60.112" />
+    <PackageReference Include="MicroPlumberd" Version="1.0.62.114" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\EventPi.Abstractions\EventPi.Abstractions.csproj" />
+    <PackageReference Include="MicroPlumberd.Services" Version="1.0.62.114" />
   </ItemGroup>
 
 </Project>
