--- a/src/EventPi.Services.NetworkMonitor.Ui/EventPi.Services.NetworkMonitor.Ui.csproj
+++ b/src/EventPi.Services.NetworkMonitor.Ui/EventPi.Services.NetworkMonitor.Ui.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -15,8 +15,8 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.4" />
     <PackageReference Include="MudBlazor" Version="6.19.1" />
-    <PackageReference Include="MicroPlumberd.Services" Version="1.0.60.112" />
-    <PackageReference Include="MicroPlumberd.SourceGenerators" Version="1.0.60.112" />
+    <PackageReference Include="MicroPlumberd.Services" Version="1.0.62.114" />
+    <PackageReference Include="MicroPlumberd.SourceGenerators" Version="1.0.62.114" />
   </ItemGroup>
 
   <ItemGroup>
