--- a/src/EventPi.Services.NetworkMonitor.Ui/EventPi.Services.NetworkMonitor.Ui.csproj
+++ b/src/EventPi.Services.NetworkMonitor.Ui/EventPi.Services.NetworkMonitor.Ui.csproj
@@ -15,14 +15,18 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.4" />
     <PackageReference Include="MudBlazor" Version="6.19.1" />
-    <PackageReference Include="MicroPlumberd.Services" Version="1.0.63.115" />
-    <PackageReference Include="MicroPlumberd.SourceGenerators" Version="1.0.63.115" />
+    <PackageReference Include="MicroPlumberd.Services" Version="1.0.64.116" />
+    <PackageReference Include="MicroPlumberd.SourceGenerators" Version="1.0.64.116" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Observable\Source\ModelingEvolution.Observable.Blazor\ModelingEvolution.Observable.Blazor.csproj" />
     <ProjectReference Include="..\..\..\Observable\Source\ModelingEvolution.Observable\ModelingEvolution.Observable.csproj" />
     <ProjectReference Include="..\EventPi.Services.NetworkMonitor.Contract\EventPi.Services.NetworkMonitor.Contract.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
