--- a/src/EventPi.NetworkMonitor.App.Blazor/EventPi.NetworkMonitor.App.Blazor.csproj
+++ b/src/EventPi.NetworkMonitor.App.Blazor/EventPi.NetworkMonitor.App.Blazor.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
     <PackageReference Include="MudBlazor" Version="6.19.1" />
     <PackageReference Include="MicroPlumberd.SourceGenerators" Version="1.0.69.119" />
+    <PackageReference Include="MicroPlumberd.Services" Version="1.0.69.119" />
+    <PackageReference Include="MicroPlumberd.Encryption" Version="1.0.69.119" />
   </ItemGroup>
 
   <ItemGroup>
