--- a/src/EventPi.Services.NetworkMonitor.Contract/EventPi.Services.NetworkMonitor.Contract.csproj
+++ b/src/EventPi.Services.NetworkMonitor.Contract/EventPi.Services.NetworkMonitor.Contract.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EventPi.Abstractions\EventPi.Abstractions.csproj" />
+    <PackageReference Include="MicroPlumberd.Services" Version="1.0.69.119" />
+    <PackageReference Include="MicroPlumberd.Encryption" Version="1.0.69.119" />
   </ItemGroup>
 
 </Project>
