--- a/src/EventPi.Services.NetworkMonitor.Ui/EventPi.Services.NetworkMonitor.Ui.csproj
+++ b/src/EventPi.Services.NetworkMonitor.Ui/EventPi.Services.NetworkMonitor.Ui.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.5" />
     <PackageReference Include="MudBlazor" Version="6.19.1" />
     <PackageReference Include="MicroPlumberd.SourceGenerators" Version="1.0.69.119" />
+    <PackageReference Include="MicroPlumberd.Services" Version="1.0.69.119" />
   </ItemGroup>
 
   <ItemGroup>
