--- a/src/EventPi.Services.Camera/EventPi.Services.Camera.csproj
+++ b/src/EventPi.Services.Camera/EventPi.Services.Camera.csproj
@@ -27,6 +27,7 @@
 	</ItemGroup>
 
   <ItemGroup>
+	  <PackageReference Include="CliWrap" Version="3.6.6" />
 	  <PackageReference Include="FluentValidation" Version="11.9.1" />
 	  <PackageReference Include="Google.Protobuf" Version="3.26.1" />
 	  <PackageReference Include="Grpc.AspNetCore" Version="2.62.0" />
