--- a/src/EventPi.Services.Camera/EventPi.Services.Camera.csproj
+++ b/src/EventPi.Services.Camera/EventPi.Services.Camera.csproj
@@ -25,7 +25,7 @@
 	<ItemGroup>
 		<Protobuf Include="Protos\cameraAutoHistogram.proto" GrpcServices="Client" />
 		<Protobuf Include="Protos\cameraGreeter.proto" GrpcServices="Client" />
-		<Protobuf Include="Protos\cameraAutoShutter.proto" GrpcServices="Client" />
+		<Protobuf Include="Protos\cameraFrameFeaturesConfigurator.proto" GrpcServices="Client" />
 		<Protobuf Include="Protos\cameraConfigurator.proto" GrpcServices="Client" />
 		<Protobuf Include="Protos\cameraShutter.proto" GrpcServices="Client" />
 		<Protobuf Include="Protos\frameFeatures.proto" GrpcServices="Server" />
@@ -49,6 +49,7 @@
 	  <PackageReference Include="MicroPlumberd" Version="1.0.69.119" />
     <PackageReference Include="MicroPlumberd.Services" Version="1.0.69.119" />
     <PackageReference Include="MicroPlumberd.SourceGenerators" Version="1.0.69.119" />
+    <PackageReference Include="ModelingEvolution.DirectConnect" Version="1.0.8.25" />
     <PackageReference Include="protobuf-net.Core" Version="3.2.30" />
   </ItemGroup>
 
