--- a/src/EventPi.AutoUpdater.Host/EventPi.AutoUpdater.Host.csproj
+++ b/src/EventPi.AutoUpdater.Host/EventPi.AutoUpdater.Host.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileTag>modelingevolution/autoupdater:latest</DockerfileTag>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
