--- a/src/EventPi.AutoUpdater.Host/Dockerfile
+++ b/src/EventPi.AutoUpdater.Host/Dockerfile
@@ -2,6 +2,42 @@
 
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+RUN apt-get update
+RUN apt-get install -y ssh-client wget curl 
+
+ENV DOCKER_VERSION=20.10.24
+ENV DOCKER_COMPOSE_VERSION=2.29.1
+
+# Add a script to download Docker binaries based on the architecture
+RUN set -eux; \
+    ARCH=$(uname -m); \
+    if [ "$ARCH" = "x86_64" ]; then \
+        ARCH="x86_64"; \
+    elif [ "$ARCH" = "aarch64" ]; then \
+        ARCH="aarch64"; \
+    else \
+        echo "Unsupported architecture: $ARCH"; \
+        exit 1; \
+    fi; \
+    curl -fsSL "https://download.docker.com/linux/static/stable/$ARCH/docker-$DOCKER_VERSION.tgz" -o docker.tgz; \
+    tar xzvf docker.tgz; \
+    mv docker/* /usr/local/bin/; \
+    rm -rf docker docker.tgz
+
+# Add a script to download Docker Compose binaries based on the architecture
+RUN set -eux; \
+    ARCH=$(uname -m); \
+    if [ "$ARCH" = "x86_64" ]; then \
+        ARCH="x86_64"; \
+    elif [ "$ARCH" = "aarch64" ]; then \
+        ARCH="aarch64"; \
+    else \
+        echo "Unsupported architecture: $ARCH"; \
+        exit 1; \
+    fi; \
+    curl -SL "https://github.com/docker/compose/releases/download/v${DOCKER_COMPOSE_VERSION}/docker-compose-$(uname -s)-${ARCH}" -o /usr/local/bin/docker-compose; \
+    chmod +x /usr/local/bin/docker-compose
+
 WORKDIR /app
 EXPOSE 8080
 
