Observable and additional configuration

--- a/src/EventPi.AutoUpdater.Host/Dockerfile
+++ b/src/EventPi.AutoUpdater.Host/Dockerfile
@@ -62,4 +62,6 @@ RUN dotnet publish "./EventPi.AutoUpdater.Host.csproj" -c $BUILD_CONFIGURATION -
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+
+VOLUME /data
 ENTRYPOINT ["dotnet", "EventPi.AutoUpdater.Host.dll"]
