--- a/src/EventPi.AutoUpdater.Host/EventPi.AutoUpdater.Host.csproj
+++ b/src/EventPi.AutoUpdater.Host/EventPi.AutoUpdater.Host.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Ductus.FluentDocker" Version="2.10.59" />
     <PackageReference Include="LibGit2Sharp" Version="0.30.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <PackageReference Include="ModelingEvolution.Observable.Blazor" Version="0.0.5.4" />
     <PackageReference Include="MudBlazor" Version="7.6.0" />
   </ItemGroup>
 
