--- a/src/EventPi.AutoUpdater.Host/EventPi.AutoUpdater.Host.csproj
+++ b/src/EventPi.AutoUpdater.Host/EventPi.AutoUpdater.Host.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EventPi.AutoUpdate\EventPi.AutoUpdate.csproj" />
+    <ProjectReference Include="..\EventPi.NetworkMonitor\EventPi.NetworkMonitor.csproj" />
   </ItemGroup>
 
 </Project>
