--- a/src/EventPi.Abstractions/EventPi.Abstractions.csproj
+++ b/src/EventPi.Abstractions/EventPi.Abstractions.csproj
@@ -16,19 +16,17 @@
     <Copyright>ModelingEvolution</Copyright>
     <Authors>ModelingEvolution Team</Authors>
   </PropertyGroup>
-
-
-  <ItemGroup>
-    <None Include="..\..\README.md">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MicroPlumberd" Version="1.0.72.122" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
     
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 </Project>
