--- a/src/EventPi.Services.Camera/EventPi.Services.Camera.csproj
+++ b/src/EventPi.Services.Camera/EventPi.Services.Camera.csproj
@@ -55,6 +55,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\VideoStreaming\src\ModelingEvolution.VideoStreaming.Buffers\ModelingEvolution.VideoStreaming.Buffers.csproj" />
+    <ProjectReference Include="..\..\..\VideoStreaming\src\ModelingEvolution.VideoStreaming.VectorGraphics\ModelingEvolution.VideoStreaming.VectorGraphics.csproj" />
     <ProjectReference Include="..\..\..\VideoStreaming\src\ModelingEvolution.VideoStreaming\ModelingEvolution.VideoStreaming.csproj" />
     <ProjectReference Include="..\EventPi.Abstractions\EventPi.Abstractions.csproj" />
     <ProjectReference Include="..\EventPi.Pid\EventPi.Pid.csproj" />
