--- a/src/EventPi.Services.Camera/EventPi.Services.Camera.csproj
+++ b/src/EventPi.Services.Camera/EventPi.Services.Camera.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\VideoStreaming\src\ModelingEvolution,VideoStreaming.Yolo\ModelingEvolution.VideoStreaming.Yolo.csproj" />
     <ProjectReference Include="..\..\..\VideoStreaming\src\ModelingEvolution.VideoStreaming.Buffers\ModelingEvolution.VideoStreaming.Buffers.csproj" />
     <ProjectReference Include="..\..\..\VideoStreaming\src\ModelingEvolution.VideoStreaming.VectorGraphics\ModelingEvolution.VideoStreaming.VectorGraphics.csproj" />
     <ProjectReference Include="..\..\..\VideoStreaming\src\ModelingEvolution.VideoStreaming\ModelingEvolution.VideoStreaming.csproj" />
