Fixing parsing strongly typed identifiers

--- a/src/EventPi.Services.Camera/EventPi.Services.Camera.csproj
+++ b/src/EventPi.Services.Camera/EventPi.Services.Camera.csproj
@@ -20,7 +20,9 @@
   <ItemGroup>
     <None Remove="Protos\cameraAutoHistogram.proto" />
   </ItemGroup>
-
+  <PropertyGroup Condition="'$(OS)' == 'Windows_NT'">
+    <DefineConstants>$(DefineConstants);WINDOWS</DefineConstants>
+  </PropertyGroup>
 
 	<ItemGroup>
 		<Protobuf Include="Protos\cameraAutoHistogram.proto" GrpcServices="Client" />
