--- a/src/EventPi.Pwm.Ui.Wasm/EventPi.Pwm.Ui.Wasm/Properties/launchSettings.json
+++ b/src/EventPi.Pwm.Ui.Wasm/EventPi.Pwm.Ui.Wasm/Properties/launchSettings.json
@@ -4,9 +4,9 @@
       "http": {
         "commandName": "Project",
         "dotnetRunMessages": true,
-        "launchBrowser": false,
+        "launchBrowser": true,
         "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-        "applicationUrl": "http://localhost:5088",
+        "applicationUrl": "http://localhost:5168",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
