--- a/src/EventPi.Pwm.Ui.Wasm/EventPi.Pwm.Ui.Wasm.Client/EventPi.Pwm.Ui.Wasm.Client.csproj
+++ b/src/EventPi.Pwm.Ui.Wasm/EventPi.Pwm.Ui.Wasm.Client/EventPi.Pwm.Ui.Wasm.Client.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\VideoStreaming\src\ModelingEvolution.VideoStreaming.VectorGraphics\ModelingEvolution.VideoStreaming.VectorGraphics.csproj" />
     <ProjectReference Include="..\..\EventPi.SignalProcessing\EventPi.SignalProcessing.csproj" />
   </ItemGroup>
   
