--- a/src/EventPi.Pid/EventPi.Pid.csproj
+++ b/src/EventPi.Pid/EventPi.Pid.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EventPi.SignalProcessing\EventPi.SignalProcessing.csproj" />
+  </ItemGroup>
+
 </Project>
