--- a/src/EventPi.Abstractions/EventPi.Abstractions.csproj
+++ b/src/EventPi.Abstractions/EventPi.Abstractions.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.1" />
+    <PackageReference Include="protobuf-net" Version="3.2.45" />
     <PackageReference Include="protobuf-net.Core" Version="3.2.45" />
     
   </ItemGroup>
