--- a/src/EventPi.AutoUpdater.Host/Properties/launchSettings.json
+++ b/src/EventPi.AutoUpdater.Host/Properties/launchSettings.json
@@ -24,6 +24,16 @@
       },
       "publishAllPorts": true,
       "useSSL": false
+    },
+    "WSL": {
+      "commandName": "WSL2",
+      "launchBrowser": true,
+      "launchUrl": "http://localhost:5018",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "http://localhost:5018"
+      },
+      "distributionName": ""
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
