.NET 10 upgrade: multi-targeting, package updates, remove System.Linq.Async

--- a/src/EventPi.Abstractions/EventPi.Abstractions.csproj
+++ b/src/EventPi.Abstractions/EventPi.Abstractions.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
@@ -19,10 +19,10 @@
 
  
   <ItemGroup>
-    <PackageReference Include="MicroPlumberd" Version="1.0.114.150" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.5" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.5" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.5" />
+    <PackageReference Include="MicroPlumberd" Version="1.0.122.154" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="10.0.0" />
     <PackageReference Include="protobuf-net" Version="3.2.52" />
     <PackageReference Include="protobuf-net.Core" Version="3.2.52" />
     
