--- a/src/EventPi.Services.Camera/EventPi.Services.Camera.csproj
+++ b/src/EventPi.Services.Camera/EventPi.Services.Camera.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFramework>net9.0</TargetFramework>
+	  <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
 	  <ImplicitUsings>enable</ImplicitUsings>
 	  <Nullable>enable</Nullable>
 	  <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
@@ -53,7 +53,7 @@
     <PackageReference Include="MicroPlumberd.Services" Version="1.0.77.125" />
     <PackageReference Include="MicroPlumberd.SourceGenerators" Version="1.0.77.125" />
     <PackageReference Include="ModelingEvolution.DirectConnect" Version="1.0.8.25" />
-    <PackageReference Include="protobuf-net.Core" Version="3.2.45" />
+    <PackageReference Include="protobuf-net.Core" Version="3.2.52" />
     <PackageReference Include="SkiaSharp.Views.Blazor" Version="3.116.1" />
   </ItemGroup>
 
