--- a/src/EventPi.Pwm.Ui.Wasm/EventPi.Pwm.Ui.Wasm/EventPi.Pwm.Ui.Wasm.csproj
+++ b/src/EventPi.Pwm.Ui.Wasm/EventPi.Pwm.Ui.Wasm/EventPi.Pwm.Ui.Wasm.csproj
@@ -1,14 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\EventPi.Pwm.Ui.Wasm.Client\EventPi.Pwm.Ui.Wasm.Client.csproj" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="10.0.0" />
   </ItemGroup>
 
 </Project>
