--- a/src/EventPi.SignalProcessing.Ui/EventPi.SignalProcessing.Ui.csproj
+++ b/src/EventPi.SignalProcessing.Ui/EventPi.SignalProcessing.Ui.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
@@ -14,7 +14,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0" />
     <PackageReference Include="SkiaSharp.Views.Blazor" Version="3.116.1" />
-    <PackageReference Include="protobuf-net" Version="3.2.45" />
+    <PackageReference Include="protobuf-net" Version="3.2.52" />
   </ItemGroup>
 
   <ItemGroup>
