--- a/src/EventPi.NetworkMonitor/EventPi.NetworkMonitor.csproj
+++ b/src/EventPi.NetworkMonitor/EventPi.NetworkMonitor.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="ModelingEvolution.Ipv4" Version="1.0.0" />
-    <PackageReference Include="ModelingEvolution.JsonParsableConverter" Version="1.0.0" />
+    <PackageReference Include="ModelingEvolution.JsonParsableConverter" Version="*" />
     <PackageReference Include="Tmds.DBus.Protocol" Version="0.21.2" />
   </ItemGroup>
 </Project>
