--- a/src/EventPi.Services.Camera.Cli/EventPi.Services.Camera.Cli.csproj
+++ b/src/EventPi.Services.Camera.Cli/EventPi.Services.Camera.Cli.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ModelingEvolution.Drawing" Version="1.0.20.21" />
+    <PackageReference Include="ModelingEvolution.Drawing" Version="*" />
   </ItemGroup>
 
   <ItemGroup>
