--- a/src/EventPi.Services.Camera.Contract/EventPi.Services.Camera.Contract.csproj
+++ b/src/EventPi.Services.Camera.Contract/EventPi.Services.Camera.Contract.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MicroPlumberd" Version="1.0.77.125" />
-    <PackageReference Include="ModelingEvolution.Drawing" Version="1.0.35.26" />
+    <PackageReference Include="ModelingEvolution.Drawing" Version="*" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EventPi.Abstractions\EventPi.Abstractions.csproj" />
